<resources>
    <string name="app_name">DrawingMagic</string>
    <string name="drawing_tools">Drawing tools</string>
    <string name="lines_on_touch">Lines on touch</string>
    <string name="dashed">Dashed line</string>
    <string name="change_brush_size">Brush size</string>
    <string name="type_of_grid">Type of grid</string>
    <string name="fill_shape">Fill shape</string>
    <string name="draw_arrow">Draw arrow</string>
    <string name="draw_rect">Draw rectangle</string>
    <string name="draw_triangle">Draw triangle</string>
    <string name="draw_circle">Draw circle</string>
    <string name="draw_line">Draw line</string>
    <string name="free_drawing">Free drawing</string>
    <string name="effects">Effects</string>
    <string name="canvas_tools">Canvas tools</string>
    <string name="welcome_choose_an_action">Welcome to DrawingMagic, please select next action</string>
    <string name="new_empty_canvas">Empty canvas</string>
    <string name="choose_from_gallery">Pick up from Gallery</string>
    <string name="camera">Camera</string>
    <string name="rotate">Rotate</string>
    <string name="choose_filter">Choose Filter</string>
    <string name="grid_off">Grid off</string>
    <string name="only_edges">Only edges</string>
    <string name="grid_on">Grid on</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="clear_all">Clear all</string>
    <string name="x">X</string>
    <string name="y">Y</string>
    <string name="tilt_level">Tilt level</string>

    <!-- FILTERS -->
    <string name="contrast">Contrast</string>
    <string name="invert">Invert</string>
    <string name="pixelation">Pixelation</string>
    <string name="hue">Hue</string>
    <string name="gamma">Gamma</string>
    <string name="brightness">Brightness</string>
    <string name="sepia">Sepia</string>
    <string name="grayscale">Grayscale</string>
    <string name="sharpness">Sharpness</string>
    <string name="sobel_edge_detection">Sobel Edge Detection</string>
    <string name="convultion">3x3 Convolution</string>
    <string name="emboss">Emboss</string>
    <string name="posterize">Posterize</string>
    <string name="grouped_filter">Grouped FILTERS</string>
    <string name="saturation">Saturation</string>
    <string name="exposure">Exposure</string>
    <string name="highlight_shadow">Highlight Shadow</string>
    <string name="monochrome">Monochrome</string>
    <string name="opacity">Opacity</string>
    <string name="white_balance">White Balance"</string>
    <string name="rgb">RGB</string>
    <string name="tone_curve">ToneCurve</string>
    <string name="vignette">Vignette</string>
    <string name="lookup_amatorka">Lookup (Amatorka)</string>
    <string name="guassian_blur">Gaussian Blur</string>
    <string name="crosshatch">Crosshatch</string>
    <string name="box_blur">Box Blur</string>
    <string name="cga_color_space">CGA Color Space</string>
    <string name="dilation">Dilation</string>
    <string name="kuwahara">Kuwahara</string>
    <string name="rgb_dilation">RGB Dilation</string>
    <string name="sketch">Sketch</string>
    <string name="toon">Toon</string>
    <string name="smooth_toon">Smooth Toon</string>
    <string name="buldge_distortion">Bulge Distortion</string>
    <string name="glass_sphere">Glass Sphere</string>
    <string name="haze">Haze</string>
    <string name="laplacian">Laplacian</string>
    <string name="non_maximum_suppression">Non Maximum Suppression</string>
    <string name="sphere_refraction">Tilt</string>
    <string name="swirl">Swirl</string>
    <string name="biliteral_blur">Bilateral Blur</string>
    <string name="levels_min_adjust">Levels Min (Mid Adjust)</string>
    <string name="color_balance">Color Balance</string>
    <string name="false_color">False Color</string>
    <string name="weak_pixel_inclusion">Weak Pixel Inclusion</string>
    <string name="blend_dissolve">Blend (Dissolve)</string>
    <string name="blend_darken">Blend (Darken)</string>
    <string name="blend_color_dodge">Blend (Color Dodge)</string>
    <string name="blend_color_burn">Blend (Color Burn)</string>
    <string name="blend_source_over">Blend (Source Over)</string>
    <string name="blend_difference">Blend (Difference)</string>
    <string name="blend_color">Blend (Color)</string>
    <string name="blend_alpha">Blend (Alpha)</string>
    <string name="blend_screen">Blend (Screen)</string>
    <string name="blend_overlay">Blend (Overlay)</string>
    <string name="blend_multiply">Blend (Multiply)</string>
    <string name="blend_divide">Blend (Divide)</string>
    <string name="blend_add">Blend (Add)</string>
    <string name="blend_lighten">Blend (Lighten)</string>
    <string name="blend_hard_light">Blend (Hard Light)</string>
    <string name="blend_exclusion">Blend (Exclusion)</string>
    <string name="blend_hue">Blend (Hue)</string>
    <string name="blend_saturation">Blend (Saturation)</string>
    <string name="blend_luminosity">Blend (Luminosity)</string>
    <string name="blend_linear_burn">Blend (Linear Burn)</string>
    <string name="blend_light">Blend (Soft Light)</string>
    <string name="blend_substract">Blend (Subtract)</string>
    <string name="blend_chroma_key">Blend (Chroma Key)</string>
    <string name="blend_normal">Blend (Normal)</string>
    <string name="apply">Apply</string>
    <string name="restore_original">Restore</string>
    <string name="skew">Skew</string>
    <string name="angle">Angle</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="effect_adjuster">Effect adjuster</string>
    <string name="flip_vertical">Flip vertical</string>
    <string name="flip_horizontal">Flip horizontal</string>
    <string name="mirror_horizontal">Mirror horizontally</string>
    <string name="mirror_vertical">Mirror verticaly</string>
    <string name="splash_screen_title">Welcome to Photo Magic ;)</string>
    <string name="got_it">Got it!</string>
    <string name="next">Next</string>
    <string name="grid_partly">Grid edges switched on</string>
</resources>
