<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_transparency"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tilt_level"
        android:textColor="@color/default_text_colour" />

    <RelativeLayout
        android:id="@+id/rlTiltXHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitle">

        <TextView
            android:id="@+id/tvX"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/x"
            android:textColor="@color/default_text_colour" />

        <SeekBar
            android:id="@+id/seekBarTiltFactorX"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rlTiltYHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rlTiltXHolder">

        <TextView
            android:id="@+id/tvY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/y"
            android:textColor="@color/default_text_colour" />

        <SeekBar
            android:id="@+id/seekBarTiltFactorY"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progress="50" />


    </RelativeLayout>
</RelativeLayout>