<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#66000000"
        android:padding="10dp"
        android:text="@string/welcome_choose_an_action"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="4dp"
        android:background="#66000000"
        android:baselineAligned="false"
        android:gravity="end">

        <LinearLayout
            android:id="@+id/llEmptyCanvas"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/mivEmptyCanvas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scaleType="center"
                app:materialIcon="content_paste"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/new_empty_canvas"
                android:textColor="@color/default_text_colour" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCamera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/mivTakeCameraPicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scaleType="center"
                app:materialIcon="camera"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/camera"
                android:textColor="@color/default_text_colour" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/llGallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:id="@+id/mivGallery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:scaleType="center"
                app:materialIcon="image_area"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="@string/choose_from_gallery"
                android:textColor="@color/default_text_colour" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>