<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/default_transparency">


    <LinearLayout
        android:id="@+id/llClearingTools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/default_margin"
        android:baselineAligned="false">

        <RelativeLayout
            android:id="@+id/rlUndo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="1">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="2dp"
                android:layout_marginRight="2dp"
                android:layout_toLeftOf="@+id/tvUndo"
                android:layout_toStartOf="@+id/tvUndo"
                android:scaleType="center"
                app:materialIcon="rotate_left"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="@dimen/default_icon_size" />

            <TextView
                android:id="@+id/tvUndo"
                style="@style/tools_description_text_view"
                android:text="@string/undo" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlRedo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="2">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/tvRedo"
                android:layout_toStartOf="@+id/tvRedo"
                android:scaleType="center"
                app:materialIcon="rotate_right"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="@dimen/default_icon_size" />

            <TextView
                android:id="@+id/tvRedo"
                style="@style/tools_description_text_view"
                android:text="@string/redo" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlClearCanvas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:tag="3">

            <net.steamcrafted.materialiconlib.MaterialIconView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="5dp"
                android:layout_marginRight="5dp"
                android:layout_toLeftOf="@+id/tvClearAll"
                android:layout_toStartOf="@+id/tvClearAll"
                android:scaleType="center"
                app:materialIcon="broom"
                app:materialIconColor="@color/default_text_colour"
                app:materialIconSize="@dimen/default_icon_size" />

            <TextView
                android:id="@+id/tvClearAll"
                style="@style/tools_description_text_view"
                android:text="@string/clear_all" />

        </RelativeLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/llClearingTools"
        android:background="@color/default_transparency"
        android:orientation="horizontal">

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/mivApply"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            app:materialIcon="check"
            app:materialIconColor="@color/default_text_colour"
            app:materialIconSize="@dimen/default_menu_icons_size" />

        <net.steamcrafted.materialiconlib.MaterialIconView
            android:id="@+id/mivCancel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:scaleType="center"
            app:materialIcon="close"
            app:materialIconColor="@color/default_text_colour"
            app:materialIconSize="@dimen/default_menu_icons_size" />

    </LinearLayout>


</RelativeLayout>